tried to see if my git works

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git test</title>
 </head>
+
 <body>
+    <h1>wagwagn</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ea temporibus natus. Eaque nesciunt accusamus possimus iste deserunt. Voluptas ipsam debitis, perspiciatis eaque natus modi culpa provident ad repellat fugit.</p>
 </body>
 </html>
