--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>wagwagn</h1>
+    <h1>wagwagn my guys </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ea temporibus natus. Eaque nesciunt accusamus possimus iste deserunt. Voluptas ipsam debitis, perspiciatis eaque natus modi culpa provident ad repellat fugit.</p>
 </body>
 </html>
