--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git test</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <h1>wagwagn my guys </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ea temporibus natus. Eaque nesciunt accusamus possimus iste deserunt. Voluptas ipsam debitis, perspiciatis eaque natus modi culpa provident ad repellat fugit.</p>
+    <section>
+        <div id="box">
+            <div class="items">ONE</div>
+            <div class="items">TWO</div>
+            <div class="items">THREE</div>
+            <div class="items">FOUR</div>
+        </div>
+    </section>
 </body>
 </html>
