--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git test</title>
+    <title>js fundamentals</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <section>
-        <div id="box">
-            <div class="items">ONE</div>
-            <div class="items">TWO</div>
-            <div class="items">THREE</div>
-            <div class="items">FOUR</div>
-        </div>
-    </section>
+    
+    <script src="/script.js"></script>
 </body>
 </html>
